<resources>
    <string name="app_name">C2GPSLocationTest</string>
    <string name="action_settings">Settings</string>
    <string name="btn_location">Location</string>
    <string name="location_test">Location Test</string>
    <string name="toggle_wifi">Toggle Wifi</string>
    <string name="connect_wifi">Connect To Wifi</string>
    <string name="wifi_test">Wifi Test</string>
    <string name="button_bluetooth">Toggle Bluetooth</string>
    <string name="bluetooth_test">Bluetooth Test</string>
    <string name="bluetooth_status_enabled">Your bluetooth is enabled.</string>
    <string name="bluetooth_status_disabled">Your bluetooth is disabled.</string>
    <string name="try_again">Please try again.</string>
    <string name="reset_statuses">Reset Statuses</string>
    <string name="location_status_result">"Your coordinates are (%1$s, %2$s)"</string>
    <string name="location_status_unavailable">Your location/GPS provider is enabled, but your location cannot be determined</string>
    <string name="location_status_enabled">Your GPS/location is enabled.</string>
    <string name="wifi_status_disabled">Your wifi is now disabled.</string>
    <string name="wifi_status_connected">"You are connected to: %1$s"</string>
    <string name="wifi_status_disconnected">You are not connected to a network.</string>
    <string name="wifi_status_already_enabled">Your wifi is already enabled.</string>
    <string name="wifi_status_enabled">Your wifi is enabled.</string>
    <string name="wifi_enable_wifi">Please enable wifi.</string>
</resources>
