<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.matias.c2gpslocationtest.ConnectivityTestActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_location"
        android:id="@+id/buttonLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="testLocation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_test"
        android:id="@+id/textViewLocation"
        android:layout_below="@+id/buttonLocation"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_wifi"
        android:id="@+id/buttonToggleWifi"
        android:layout_below="@+id/textViewLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="toggleWifi" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_wifi"
        android:id="@+id/buttonConnectToWifi"
        android:layout_below="@+id/buttonToggleWifi"
        android:layout_centerHorizontal="true"
        android:onClick="connectWifiNetwork" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_test"
        android:id="@+id/textViewWifi"
        android:layout_below="@+id/buttonConnectToWifi"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_bluetooth"
        android:id="@+id/buttonBluetooth"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/textViewWifi"
        android:layout_centerHorizontal="true"
        android:onClick="testBluetooth" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_test"
        android:id="@+id/textViewBluetooth"
        android:layout_below="@+id/buttonBluetooth"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_statuses"
        android:id="@+id/buttonResetStatuses"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:onClick="resetStatuses" />
</RelativeLayout>
